# androCE

./: .gitignore  README.md  adb-wlan.conf  adb-wlan.conf.example  build-and-deploy.bat  build.bat  build.gradle.kts  deploy.bat  gradle.properties  gradlew  gradlew.bat  logs.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: memscan
app/src/main/assets/frida/: speedhack.js
app/src/main/cpp/: CMakeLists.txt  arm64_hook.c  got_hook.c  hook_stub.c  injector.c  memscan  memscan.c  speedhook.c  vdso_hook.c
app/src/main/java/com/androce/: AndroCEApp.kt  MainActivity.kt
app/src/main/java/com/androce/core/: AppLogger.kt  AppPrefs.kt  ContextExtensions.kt  DependencyInstaller.kt  FloatingIconService.kt  FreezeService.kt  FridaSpeedHack.kt  GlobalExceptionHandler.kt  MemoryAccess.kt  MemoryProvider.kt  MemoryReader.kt  MemoryWriter.kt  ProcessLister.kt  RootAccess.kt  RootMemoryProvider.kt  Scanner.kt  SetupLogger.kt  SpeedControl.kt  SpeedHookMethod.kt  SpeedInjector.kt  ValueEncoder.kt  VirtualMemoryProvider.kt
app/src/main/java/com/androce/model/: CheatTable.kt  MemoryRegion.kt  ProcessInfo.kt  RegionFilter.kt  ScanComparison.kt  ScanResult.kt  ValueType.kt
app/src/main/java/com/androce/ui/: LoadingScreen.kt  ProcessListScreen.kt  ResultsScreen.kt  (+5 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
logs/: logcat_20260516_120607.txt
scripts/: deploy-log-stream.ps1
tools/: frida_speedhack.js
(+17 files in other folders)
